# rust-psp

./: .gitignore  .gitmodules  .rgignore  Cargo.toml  LICENSE  README.md  bindgen.sh  book.toml  build.rs  prx.md
book/src/: SUMMARY.md  complex_3d.md  final_project.md  framebuffer.md  next_steps.md  scegu.md  sound.md  stdio.md  triangle.md  vfpu.md
book/src/debug/: emulator.md  hardware.md
book/src/framebuffer/: emb-g.md  intro.md  raw.md
book/src/hello/: structure.md  writing_hello_world.md
book/src/input/: hello.md  intro.md
book/src/intro/: hw_overview.md  what_is.md
book/src/scegu/: setup.md  understanding.md
book/src/setup/: debug.md  install.md
cargo-psp/: Cargo.toml
cargo-psp/src/: fix_imports.rs  main.rs
ci/: Dockerfile-ppsspp
ci/concourse/: build-rust-macos.yml  build-rust-windows.yml  build-rust.bat  build-rust.sh  build-rust.yml  concourse.yml  env.sh  run-tests.sh  run-tests.yml
ci/docker/compile-rust/: Dockerfile
ci/docker/psptoolchain/: Dockerfile
ci/scripts/: compile_all_examples.sh
ci/std_verification/: Cargo.toml
ci/std_verification/src/: main.rs  time_test.rs
ci/tests/: Cargo.toml
ci/tests/math-test/: Cargo.toml
ci/tests/math-test/src/: main.rs
ci/tests/psp-ci-test/: Cargo.toml  EBOOT.PBP  Makefile  psp-ci-test.expected
ci/tests/psp-ci-test/src/: main.rs
ci/tests/src/: bmp_screenshot_test.rs  main.rs  math_test.rs  vfpu_test.rs  vram_test.rs
ci/tests/vram-test/: Cargo.toml
ci/tests/vram-test/src/: main.rs
examples/audio/: Cargo.toml
examples/audio/assets/: showtime.rawpcm16
examples/audio/src/: main.rs
examples/clock-speed/: Cargo.toml
examples/clock-speed/src/: main.rs
examples/crab-rave/: Cargo.toml
examples/crab-rave/assets/: crab.in  crab.raw  crabrave.pcm  rustacean1.raw
examples/crab-rave/src/: crab.rs  main.rs
examples/cube/: Cargo.toml  Makefile  Psp.toml  ferris.raw
examples/cube/src/: main.rs
examples/delta-time/: Cargo.toml  Makefile
examples/delta-time/src/: main.rs
examples/embedded-graphics/: Cargo.toml  Makefile
examples/embedded-graphics/assets/: ferris.raw
examples/embedded-graphics/src/: main.rs
examples/fontdue-scrolltext/: Cargo.toml
examples/fontdue-scrolltext/src/: main.rs
examples/fontdue-scrolltext/src/graphics/: mod.rs  sprite.rs
examples/gu-background/: Cargo.toml  Makefile  Xargo.toml
examples/gu-background/src/: main.rs
examples/gu-debug-print/: Cargo.toml
examples/gu-debug-print/src/: main.rs
examples/hello-world/: Cargo.toml  Makefile  Xargo.toml  linkfile.prx  psp.json
examples/hello-world/src/: main.rs
examples/lights/: Cargo.toml
examples/lights/src/: main.rs
examples/lit-crab/: Cargo.toml
examples/lit-crab/src/: crab.rs  main.rs
examples/lvgl/: Cargo.toml
examples/lvgl/include/: lv_conf.h
examples/lvgl/src/: main.rs
examples/memcpy_bench/: Cargo.toml
examples/memcpy_bench/src/: main.rs
examples/msg-dialog/: Cargo.toml  Makefile
examples/msg-dialog/src/: main.rs
examples/paint-mode/: Cargo.toml  Psp.toml
examples/paint-mode/src/: analog_stick_to_delta.rs  background.rs  debug_textbox.rs  drawobject.rs  lib.rs  main.rs
examples/power/: Cargo.toml  Makefile
examples/power/src/: main.rs
examples/psp-power/: Cargo.toml  Makefile
examples/psp-power/src/: main.rs
examples/rainbow/: Cargo.toml  Makefile  Xargo.toml  psp.json
examples/rainbow/.cargo/: config
examples/rainbow/src/: main.rs
examples/rand/: Cargo.toml
examples/rand/src/: main.rs
examples/ratatui/: Cargo.toml
examples/ratatui/src/: main.rs
examples/rust-std-hello-world/: Cargo.toml
examples/rust-std-hello-world/src/: main.rs
examples/sprite-drawing/: Cargo.toml
examples/sprite-drawing/src/: main.rs
examples/tetris/: Cargo.toml  Psp.toml
examples/tetris/assets/: tetris.pcm.raw
examples/tetris/src/: audio.rs  game.rs  gameboard.rs  main.rs  sprite.rs  tetromino.rs
examples/tetris/src/graphics/: mod.rs  sprite.rs
examples/time/: Cargo.toml
examples/time/src/: main.rs
examples/vfpu-addition/: Cargo.toml  Makefile  Xargo.toml
examples/vfpu-addition/src/: main.rs
examples/vfpu-context-switching/: Cargo.toml  Makefile
examples/vfpu-context-switching/src/: main.rs
examples/wlan/: Cargo.toml
examples/wlan-test/: Cargo.toml  Makefile  linkfile.ld
examples/wlan-test/src/: main.rs
examples/wlan/src/: main.rs
libunwind/: .gitignore  Makefile  no-sdc1.patch
psp/: Cargo.toml  build.rs
psp/src/: alloc_impl.rs  benchmark.rs  constants.rs  debug.rs  eabi.rs  embedded_graphics.rs  framebuf_gfx.rs  lib.rs  panic.rs  rand.rs  screenshot.rs  test_runner.rs  vfpu.rs  vram_alloc.rs
psp/src/math/: mod.rs  trig.rs
psp/src/sys/: atrac.rs  audio.rs  codec.rs  ctrl.rs  display.rs  dmac.rs  font.rs  ge.rs  gu.rs  gum.rs  hprm.rs  io.rs  jpeg.rs  macros.rs  mod.rs  mp3.rs  mpeg.rs  nand.rs  net.rs  openpsid.rs  power.rs  psmf.rs  registry.rs  rtc.rs  sircs.rs  types.rs  umd.rs  usb.rs  utility.rs  vfpu.rs  vfpu_context.rs  video.rs  wlan.rs
psp/src/sys/kernel/: mod.rs  thread.rs
psp/src/utils/: gu.rs  mod.rs
src/: alloc_impl.rs  benchmark.rs  debug.rs  eabi.rs  framebuf_gfx.rs  lib.rs  panic.rs  screenshot.rs  sys.rs  vfpu.rs
src/sys/: atrac.rs  audio.rs  ctrl.rs  display.rs  ge.rs  gu.rs  gum.rs  hprm.rs  io.rs  jpeg.rs  kernel.rs  macros.rs  mod.rs  mp3.rs  mpeg.rs  openpsid.rs  power.rs  registry.rs  rtc.rs  sircs.rs  types.rs  umd.rs  usb.rs  utils.rs  vfpu_context.rs  video.rs
src/sys/kernel/: thread.rs
testcases/math-test/: Cargo.toml
testcases/math-test/src/: main.rs
testcases/vram-test/: Cargo.toml
testcases/vram-test/src/: main.rs
