[package]
name = "cargo-psp"
version = "0.2.2"
description = "`cargo build` wrapper for creating Sony PSP executables"
repository = "https://github.com/overdrivenpotato/rust-psp"
license = "MIT"
authors = [
    "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>"
]
edition = "2018"
default-run = "cargo-psp"

[[bin]]
name = "prxgen"

[[bin]]
name = "pack-pbp"

[[bin]]
name = "mksfo"

[[bin]]
name = "prxmin"

[dependencies]
clap = "2.33.1"
goblin = "0.2.3"
scroll = "0.10.1"
cargo_metadata = "0.10.0"
rustc_version = "0.2.3"

serde = "1.0.111"
serde_derive = "1.0.111"
bincode = "1.3.1"
toml = "0.5.6"
