[package]
name = "psp"
version = "0.1.0"
description = "A library for building full PSP modules, including both PRX plugins and regular homebrew apps."
readme = "../README.md"
repository = "https://github.com/overdrivenpotato/rust-psp"
license = "MIT"
authors = [
    "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>"
]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib", "staticlib"]

[features]
# Compile this library as a stub provider. Useful to compile this as a static
# library for other projects.
stub-only = []

[dependencies]
paste = "0.1.12"
bitflags = "1.2.1"
embedded-graphics = { version = "0.6.2", optional = true }

[dependencies.num_enum]
version = "0.5.0"
default-features = false

[dependencies.num_enum_derive]
version = "0.5.0"
default-features = false
