[package]
name = "psp-embedded-graphics-example"
version = "0.1.0"
authors = ["Marko Mijalkovic <marko.mijalkovic97@gmail.com>"]
edition = "2018"

[dependencies]
psp = { path = "../../psp", features = ["embedded-graphics"] }
embedded-graphics = { version = "0.8.1", features = ["fixed_point"]}
tinybmp = { version = "0.3.1" }
