[package]
name = "psp-lvgl-example"
version = "0.1.0"
authors = ["Marko Mijalkovic <marko.mijalkovic97@gmail.com>"]
edition = "2018"

[dependencies]
psp = { path = "../../psp", features = ["embedded-graphics"] }
embedded-graphics = "0.6.2"
lvgl = { path = "/home/paul/projects/rust/lvgl-rs/lvgl" }
lvgl-sys = { path = "/home/paul/projects/rust/lvgl-rs/lvgl-sys" }
tinybmp = { version = "0.2.2", features = ["graphics"] }

[profile.release]
debug=true
