[package]
name = "psp-ratatui-example"
version = "0.1.0"
edition = "2018"

[dependencies]
psp = { path = "../../psp", features = ["embedded-graphics"] }
embedded-graphics = { version = "0.8.1", features = ["fixed_point"]}

# Ratatui 0.30.0 has no_std support
ratatui = { version = "0.30.0-alpha.5", default-features = false }
# Use git dependency for mousefood which depends on ratatui alpha
mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "1028ac24f83920fd95a5585a85ef943901ee63ac" }

# ⚠️ Note:
# The `unicode-width` dependency needs to be patched for this to work without crashes.
# Patch it as follows in your `Cargo.toml`:
#
# ```
# [patch.crates-io]
# unicode-width = { git = "https://git.sr.ht/~sajattack/unicode-width" }
# ```
#
# This patch disables byte alignment as a workaround.
# See <https://git.sr.ht/~sajattack/unicode-width/commit/114ac4742ac29a7b69be8e0e7b1e45af43ed6d83>
