[package]
name = "rust-psp-tetris"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dependencies]
psp = { path = "../../psp" }
rand = { version = "0.7", default-features=false }
rand_chacha = { version = "0.2", default-features=false }

[profile.release]
opt-level = 3
lto = true
